--- a/Develop/CSS/style.css
+++ b/Develop/CSS/style.css
@@ -69,3 +69,8 @@ body {
   font-size: 20px;
   transition: all .3s ease-in-out;
 }
+
+/* Gray background place holder to help with grid layout */
+.visualizer {
+  background-color: gray;
+}
