fontawesome save icon added, no idea how to center the damn thing

--- a/Develop/CSS/style.css
+++ b/Develop/CSS/style.css
@@ -74,3 +74,9 @@ body {
 .visualizer {
   background-color: gray;
 }
+
+/* Center the save icon */
+.center {
+  display:inline-block;
+  vertical-align: middle;
+}
